# CS381_AaronWhitaker

./: .gitmodules
as0/: CMakeLists.txt  readme.md
as0/src/: as0.cpp  environment.cpp.bak
as1/: BED.obj:Zone.Identifier  CMakeLists.txt  readme.md
as1/src/: as1.cpp  environment.cpp.bak  skybox.cpp:Zone.Identifier
as10/: CMakeLists.txt  readme.md
as10/src/: as10.cpp
as10/src/AS10/: AS10.tscn  HostScript.gd  Networking.gd  PeerScript.gd  RemoteLabel.gd  con4CC6.tmp  icon.svg.import  project.godot
as2/: CMakeLists.txt  includable.cmake  readme.md
as2/meshes/: 12150_Christmas_Tree_V2_L2.mtl:Zone.Identifier
as2/sounds/: Propeller Plane Engine Sound Effect 4K.mp3:Zone.Identifier
as2/src/: as2.cpp  envrionment.cpp.bak  skybox.hpp
as3/: CMakeLists.txt  envrionment.cpp.bak  readme.md
as3/meshes/: 3d icon discord.glb:Zone.Identifier
as3/src/: as3.cpp  environment.cpp.bak  skybox.cpp:Zone.Identifier
as4/: CMakeLists.txt  readme.md
as4/meshes/: meteorite.glb:Zone.Identifier  space_ship2.glb
as4/textures/: Space-Free-PNG-Image(1).png:Zone.Identifier  deepbluespace-skybox_maintex.png:Zone.Identifier  image-from-rawpixel-id-3337865-jpeg(1).jpg:Zone.Identifier  image-from-rawpixel-id-3337865-jpeg.jpg:Zone.Identifier  space_ft.png:Zone.Identifier
as5/: CMakeLists.txt  readme.md
as5/sounds/: Markiplier Calls You a Nerd for 1 minute and 36 Seconds [TubeRipper.com].wav:Zone.Identifier  Markiplier Calls You a Nerd for 1 minute and 36 Seconds.mp3:Zone.Identifier  Pokémon Diamond, Pearl & Platinum - Champion Cynthia Encounter Music (HQ).mp3:Zone.Identifier  Star Fox Restored - Corneria.mp3:Zone.Identifier  Zelda OoT Five Rupee Chest Sound.mp3:Zone.Identifier  ping.wav:Zone.Identifier
as5/src/: .gitignore  VolumeControl.h  VolumeControl.h:Zone.Identifier  as5.cpp  delegate.hpp  environment.cpp.bak  raygui.cpp
as6/: CMakeLists.txt  readme.md
as6/meshes/: PolyPlane.glb:Zone.Identifier  bread.glb
as6/src/: as3.cpp.bak  as3.cpp:Zone.Identifier  as6.cpp
as6/textures/: ice2.jpg:Zone.Identifier  seamless-transparent-water-ocean-ground-texture.jpg:Zone.Identifier
as7/: CMakeLists.txt  readme.md
as7/meshes/: aeon_dart_iv(1).glb:Zone.Identifier  borderlands_style_space_ship.glb:Zone.Identifier  low_poly_igloo.glb  low_poly_igloo.glb:Zone.Identifier  low_poly_space_ship.glb:Zone.Identifier
as7/sounds/: Propeller Plane Engine Sound Effect 4K.wav:Zone.Identifier  Star Fox Music (SNES) Continue.mp3:Zone.Identifier  Star Fox Music (SNES) Course Clear (Space Version).mp3:Zone.Identifier  Star Fox Music (SNES) Player Down 2.mp3:Zone.Identifier  Star Fox Music (SNES) Titania Boss.mp3:Zone.Identifier  airplane-fly-by-02.wav:Zone.Identifier
as7/src/: as7.cpp  skybox.cpp
as7/src copy/: as4.cpp
as8/: CMakeLists.txt
as8/meshes/: bread.glb:Zone.Identifier
as8/src/: ECS.hpp:Zone.Identifier  as8.cpp  environment.cpp.bak
as9/: CMakeLists.txt  readme.md
as9/meshes/: aeon_dart_iv(2).glb:Zone.Identifier  alien_crab_drone.glb:Zone.Identifier  low_poly_planet_earth(1).glb:Zone.Identifier  low_poly_spaceship.glb:Zone.Identifier
as9/sounds/: Star Fox - OST - Title Screen.mp3:Zone.Identifier  Star Fox Restored - Controls & Course Map Select.mp3:Zone.Identifier  laser.mp3:Zone.Identifier  starfoxsfx.mp3:Zone.Identifier
as9/src/: ECS.hpp  as9.cpp  counter.cpp
